[metadata]
name = mediapills.dependency_injection
url = https://github.com/mediapills/dependency_injection
author = Andriy Yatskovets
author_email = andriy.yatskovets@gmail.com
description = A small Python dependency injection container
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >= 3.8


[options.packages.find]
where = src

[files]
packages = mediapills

[tool:pytest]
testpath = tests

filterwarnings =
    error
