[metadata]
name = mediapills.dependency_injection
url = https://github.com/mediapills/dependency_injection
author = Andriy Yatskovets
author_email = andriy.yatskovets@gmail.com
description = A small Python dependency injection container
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Application Frameworks

project_urls =
    Bug Tracker=https://github.com/mediapills/dependency-injection/issues
    Source Code=https://github.com/mediapills/dependency-injection

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >= 3.8


[options.packages.find]
where = src

[files]
packages = mediapills

[tool:pytest]
testpath = tests

filterwarnings =
    error
