[metadata]
name = mediapills.dependency_injection
url = https://github.com/mediapills/dependency-injection
author = Andriy Yatskovets
author_email = andriy.yatskovets@gmail.com
description = A small Python dependency injection container
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 'Dependency injection', 'DI', 'Inversion of Control', 'IoC, 'Patterns'
license= 'MIT'
platforms = 'any'
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker=https://github.com/mediapills/dependency-injection/issues
    Source Code=https://github.com/mediapills/dependency-injection

[options]
zip_safe = True
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >= 3.5


[options.packages.find]
where = src

[files]
packages = mediapills

[tool:pytest]
testpath = tests

filterwarnings =
    error
